# file-transfer-protocol

./: .gitignore  CMakeLists.txt
common/: packet.hpp
receiver/: main.cpp
sender/: main.cpp  send.txt
